force-app/main/default/objects/Authorization__c/Authorization__c.object-meta.xml
<CustomObject>
    <label>Authorization</label>
    <nameField>
        <displayFormat>AUTH-{MM}{YY}-{0}</displayFormat>
        <label>Authorization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>