force-app/main/default/objects/Authorization__c/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <formula>Appointment__r.Appointment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>