force-app/main/default/objects/Authorization__c/fields/Authorization_Details__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Details__c</fullName>
    <label>Authorization Details</label>
    <length>225</length>
    <type>Text</type>
</CustomField>