force-app/main/default/objects/Authorization__c/fields/Authorization_Notes__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Notes__c</fullName>
    <label>Authorization Notes</label>
    <type>TextArea</type>
</CustomField>