force-app/main/default/objects/Authorization__c/fields/Authorization_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Requested_Date__c</fullName>
    <label>Authorization Requested Date</label>
    <type>Date</type>
</CustomField>