force-app/main/default/objects/Authorization__c/fields/CareCloud_Transaction__c.field-meta.xml
<CustomField>
    <fullName>CareCloud_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareCloud Transaction</label>
    <referenceTo>CareCloud_Payment__c</referenceTo>
    <relationshipLabel>Authorizations</relationshipLabel>
    <relationshipName>Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>