force-app/main/default/objects/Authorization__c/fields/Days_Until_Precertification_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Precertification_End_Date__c</fullName>
    <formula>If(
(Precertification_End_Date__c - today())&lt;0,0,
Precertification_End_Date__c - today()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Precertification End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>