force-app/main/default/objects/Authorization__c/fields/Days_Until_Procedure_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Procedure_Date__c</fullName>
    <formula>if(
today()- Procedure_Date__c &lt;0,NULL,
today()- Procedure_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Procedure Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>