force-app/main/default/objects/Authorization__c/fields/DME__c.field-meta.xml
<CustomField>
    <fullName>DME__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DME</label>
    <referenceTo>DME__c</referenceTo>
    <relationshipLabel>Authorizations</relationshipLabel>
    <relationshipName>Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>