force-app/main/default/objects/Authorization__c/fields/DME_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>DME_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DME Checkbox</label>
    <type>Checkbox</type>
</CustomField>