force-app/main/default/objects/Authorization__c/fields/DME_Details__c.field-meta.xml
<CustomField>
    <fullName>DME_Details__c</fullName>
    <label>DME Details</label>
    <type>TextArea</type>
</CustomField>