force-app/main/default/objects/Authorization__c/fields/DME_SFID__c.field-meta.xml
<CustomField>
    <fullName>DME_SFID__c</fullName>
    <formula>DME__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DME SFID</label>
    <type>Text</type>
</CustomField>