force-app/main/default/objects/Authorization__c/fields/Imaging__c.field-meta.xml
<CustomField>
    <fullName>Imaging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imaging</label>
    <referenceTo>Imaging__c</referenceTo>
    <relationshipLabel>Authorizations</relationshipLabel>
    <relationshipName>Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>