force-app/main/default/objects/Authorization__c/fields/Imaging_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Imaging_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imaging Checkbox</label>
    <type>Checkbox</type>
</CustomField>