force-app/main/default/objects/Authorization__c/fields/Imaging_Details__c.field-meta.xml
<CustomField>
    <fullName>Imaging_Details__c</fullName>
    <label>Imaging Details</label>
    <type>TextArea</type>
</CustomField>