force-app/main/default/objects/Authorization__c/fields/Imaging_Location__c.field-meta.xml
<CustomField>
    <fullName>Imaging_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imaging Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Imaging</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Authorizations (Imaging Location)</relationshipLabel>
    <relationshipName>Authorizations1</relationshipName>
    <type>Lookup</type>
</CustomField>