force-app/main/default/objects/Authorization__c/fields/Imaging_SFID__c.field-meta.xml
<CustomField>
    <fullName>Imaging_SFID__c</fullName>
    <formula>Imaging__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imaging SFID</label>
    <type>Text</type>
</CustomField>