force-app/main/default/objects/Authorization__c/fields/Indication_Date__c.field-meta.xml
<CustomField>
    <fullName>Indication_Date__c</fullName>
    <label>Indication Date</label>
    <type>Date</type>
</CustomField>