force-app/main/default/objects/Authorization__c/fields/Insurance_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Carrier__c</fullName>
    <label>Insurance Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Health_Insurance_Company</valueSetName>
    </valueSet>
</CustomField>