force-app/main/default/objects/Authorization__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <formula>IF(CONTAINS(Appointment__r.Visit_Reason__c, &quot;PIP&quot;),   Text( Patient__r.PIP_WC_or_School_Insurance__c ) , Text( Patient__r.Insurance__c ))


/*
If(
CONTAINS( Appointment__r.Visit_Reason__c , &apos;PIP&apos;),
&quot;PIP&quot;, 
Text( Patient__r.Insurance__c )
)

Brandom Made me change this formula on 9/16/2024. - Juanus was against this notion
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Company</label>
    <type>Text</type>
</CustomField>