force-app/main/default/objects/Authorization__c/fields/LMN_Completed__c.field-meta.xml
<CustomField>
    <fullName>LMN_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LMN Completed</label>
    <type>Checkbox</type>
</CustomField>