force-app/main/default/objects/Authorization__c/fields/Medical_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Medical_Clearance__c</fullName>
    <label>Medical Clearance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medical_Clearance</valueSetName>
    </valueSet>
</CustomField>