force-app/main/default/objects/Authorization__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medication Checkbox</label>
    <type>Checkbox</type>
</CustomField>