force-app/main/default/objects/Authorization__c/fields/Medication_Details__c.field-meta.xml
<CustomField>
    <fullName>Medication_Details__c</fullName>
    <label>Medication Details</label>
    <length>225</length>
    <type>Text</type>
</CustomField>