force-app/main/default/objects/Authorization__c/fields/Medication_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Medication_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medication</label>
    <referenceTo>Medication__c</referenceTo>
    <relationshipLabel>Authorizations</relationshipLabel>
    <relationshipName>Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>