force-app/main/default/objects/Authorization__c/fields/Medication_SFID__c.field-meta.xml
<CustomField>
    <fullName>Medication_SFID__c</fullName>
    <formula>Medication_Lookup__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medication SFID</label>
    <type>Text</type>
</CustomField>