force-app/main/default/objects/Authorization__c/fields/Next_Follow_Up_Visit__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_Up_Visit__c</fullName>
    <label>Next Follow Up Visit</label>
    <type>Date</type>
</CustomField>