force-app/main/default/objects/Authorization__c/fields/Next_Precertification__c.field-meta.xml
<CustomField>
    <fullName>Next_Precertification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Precertification</label>
    <referenceTo>Authorization__c</referenceTo>
    <relationshipLabel>Prior Precertification</relationshipLabel>
    <relationshipName>Authorizations1</relationshipName>
    <type>Lookup</type>
</CustomField>