force-app/main/default/objects/Authorization__c/fields/Next_Precertification_Required__c.field-meta.xml
<CustomField>
    <fullName>Next_Precertification_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Next Precertification Required</label>
    <type>Checkbox</type>
</CustomField>