force-app/main/default/objects/Authorization__c/fields/Note_Complete__c.field-meta.xml
<CustomField>
    <fullName>Note_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Note Complete</label>
    <type>Checkbox</type>
</CustomField>