force-app/main/default/objects/Authorization__c/fields/Number_of_OT_Visits_Completed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_OT_Visits_Completed__c</fullName>
    <label>Number of OT Visits Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>