force-app/main/default/objects/Authorization__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Authorizations</relationshipLabel>
    <relationshipName>Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>