force-app/main/default/objects/Authorization__c/fields/PIP_or_W_C_Other_Request_Detail__c.field-meta.xml
<CustomField>
    <fullName>PIP_or_W_C_Other_Request_Detail__c</fullName>
    <label>PIP or W/C Other Request Detail</label>
    <type>TextArea</type>
</CustomField>