force-app/main/default/objects/Authorization__c/fields/PIP_or_W_C_Request__c.field-meta.xml
<CustomField>
    <fullName>PIP_or_W_C_Request__c</fullName>
    <label>PIP or W/C Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office Visit</fullName>
            </value>
            <value>
                <fullName>21 Day Notice</fullName>
            </value>
            <value>
                <fullName>Chiro</fullName>
            </value>
            <value>
                <fullName>PT/OT</fullName>
            </value>
            <value>
                <fullName>Body Part</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>