force-app/main/default/objects/Authorization__c/fields/PIP_or_W_C_Request_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>PIP_or_W_C_Request_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PIP or W/C Request Checkbox</label>
    <type>Checkbox</type>
</CustomField>