force-app/main/default/objects/Authorization__c/fields/Precertification_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Precertification_End_Date__c</fullName>
    <label>Precertification End Date</label>
    <type>Date</type>
</CustomField>