force-app/main/default/objects/Authorization__c/fields/Precertification_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Precertification_Start_Date__c</fullName>
    <label>Precertification Start Date</label>
    <type>Date</type>
</CustomField>