force-app/main/default/objects/Authorization__c/fields/Precertification_Status__c.field-meta.xml
<CustomField>
    <fullName>Precertification_Status__c</fullName>
    <label>Precertification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Precertification_Status</valueSetName>
    </valueSet>
</CustomField>