force-app/main/default/objects/Authorization__c/fields/Prior_Precertification__c.field-meta.xml
<CustomField>
    <fullName>Prior_Precertification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prior Precertification</label>
    <referenceTo>Authorization__c</referenceTo>
    <relationshipLabel>Next Precertification</relationshipLabel>
    <relationshipName>Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>