force-app/main/default/objects/Authorization__c/fields/Procedure_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procedure Checkbox</label>
    <type>Checkbox</type>
</CustomField>