force-app/main/default/objects/Authorization__c/fields/Procedure_SFID__c.field-meta.xml
<CustomField>
    <fullName>Procedure_SFID__c</fullName>
    <formula>Procedure__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procedure SFID</label>
    <type>Text</type>
</CustomField>