force-app/main/default/objects/Authorization__c/fields/Procedures__c.field-meta.xml
<CustomField>
    <fullName>Procedures__c</fullName>
    <label>Procedures</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Authorization_Process</valueSetName>
    </valueSet>
</CustomField>