force-app/main/default/objects/Authorization__c/fields/Provider_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Provider_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Checklist</label>
    <referenceTo>Provider_Checklist__c</referenceTo>
    <relationshipLabel>Authorizations</relationshipLabel>
    <relationshipName>Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>