force-app/main/default/objects/Authorization__c/fields/Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Id__c</fullName>
    <formula>Appointment__r.Provider_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Id</label>
    <type>Text</type>
</CustomField>