force-app/main/default/objects/Authorization__c/fields/Provider_SFID__c.field-meta.xml
<CustomField>
    <fullName>Provider_SFID__c</fullName>
    <formula>Provider__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider SFID</label>
    <type>Text</type>
</CustomField>