force-app/main/default/objects/Authorization__c/fields/Reference_Number_Representative_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number_Representative_Name__c</fullName>
    <label>Reference Number &amp; Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>