force-app/main/default/objects/Authorization__c/fields/Treating_Office__c.field-meta.xml
<CustomField>
    <fullName>Treating_Office__c</fullName>
    <label>Treating Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Office_FULL_NAME</valueSetName>
    </valueSet>
</CustomField>