force-app/main/default/objects/Authorization__c/fields/Visits_Approved__c.field-meta.xml
<CustomField>
    <fullName>Visits_Approved__c</fullName>
    <label>Visits Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>