force-app/main/default/objects/Authorization__c/fields/Visits_Completed__c.field-meta.xml
<CustomField>
    <fullName>Visits_Completed__c</fullName>
    <label>Visits Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>