force-app/main/default/objects/Authorization__c/fields/Visits_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Visits_Remaining__c</fullName>
    <formula>If(
(Visits_Approved__c -  Visits_Completed__c)&lt;0,0,
Visits_Approved__c -  Visits_Completed__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visits Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>