force-app/main/default/objects/Authorization__c/validationRules/Status_Cannot_be_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Cannot_be_Approved</fullName>
    <active>true</active>
    <description>Status cannot be Approved when Visits Approved and Precertification Start Date Precertification End Date are null</description>
    <errorConditionFormula>AND( 
  ISPICKVAL( Status__c ,  &quot;Approved&quot;),
OR(
 ISBLANK( Visits_Approved__c ) ,
 ISBLANK( Precertification_Start_Date__c ) ,
 ISBLANK( Precertification_End_Date__c )
),
OR(
 ISPICKVAL( Type__c , &quot;PT Precertification&quot;) ,
 ISPICKVAL( Type__c , &quot;OT Precertification&quot;) ,
 ISPICKVAL( Type__c , &quot;Chiro Precertification&quot;) 
)
)</errorConditionFormula>
    <errorDisplayField>Visits_Approved__c</errorDisplayField>
    <errorMessage>This record cannot be set to Approved if Visits Approved OR Precertification Start Date OR Precertification End Date are null</errorMessage>
</ValidationRule>