force-app/main/default/objects/Authorization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Provider__c</columns>
    <columns>Imaging__c</columns>
    <columns>Procedure__c</columns>
    <columns>DME__c</columns>
    <columns>PIP_or_W_C_Request__c</columns>
    <columns>Status__c</columns>
    <columns>Authorization_Notes__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>