force-app/main/default/objects/Authorization__c/listViews/All_In_Process_Precerts.listView-meta.xml
<ListView>
    <fullName>All_In_Process_Precerts</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Type__c</columns>
    <columns>Appointment_Date__c</columns>
    <columns>Provider__c</columns>
    <columns>Treating_Office__c</columns>
    <columns>Insurance_Company__c</columns>
    <columns>Precertification_Status__c</columns>
    <columns>Authorization_Notes__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Appointment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Precertification_Status__c</field>
        <operation>equals</operation>
        <value>New,Pending,Waiting For Note</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>PT Precertification,OT Precertification,Chiro Precertification</value>
    </filters>
    <label>All In Process Precerts</label>
</ListView>