force-app/main/default/objects/Authorization__c/listViews/Brookes_Authorizations.listView-meta.xml
<ListView>
    <fullName>Brookes_Authorizations</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Provider__c</columns>
    <columns>Imaging__c</columns>
    <columns>Procedure__c</columns>
    <columns>DME__c</columns>
    <columns>PIP_or_W_C_Request__c</columns>
    <columns>Status__c</columns>
    <columns>Authorization_Notes__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Brooke</value>
    </filters>
    <label>Brooke&apos;s Authorizations</label>
</ListView>