force-app/main/default/objects/Authorization__c/listViews/Completed_Authorizations.listView-meta.xml
<ListView>
    <fullName>Completed_Authorizations</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Provider__c</columns>
    <columns>DME__c</columns>
    <columns>PIP_or_W_C_Request__c</columns>
    <columns>Procedure__c</columns>
    <columns>Imaging__c</columns>
    <columns>Status__c</columns>
    <columns>Authorization_Notes__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>No Auth Required,Approved,Partial Approval,Denied,Not Covered,Duplicate/Error,21 Day Complete,LOP</value>
    </filters>
    <filters>
        <field>Provider__c</field>
        <operation>contains</operation>
        <value>Khatri</value>
    </filters>
    <label>Completed Authorizations</label>
</ListView>